deployment/novus-code-deployment/novus-code-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novus-code-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: novus-code-cert
    kubernetes.io/ingress.global-static-ip-name: novus-code-ip
spec:
  rules:
    - host: api.novus02.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: novus-code-service
                port:
                  number: 80
